[gd_scene load_steps=15 format=3 uid="uid://hpcpgsno6rru"]

[ext_resource type="Script" path="res://goblin/bomb/bomb.gd" id="1_8jomn"]
[ext_resource type="AudioStream" uid="uid://ce7vu1jkesm8y" path="res://sfx/explosion.wav" id="2_kulya"]
[ext_resource type="Texture2D" uid="uid://rq0f8ei6q6r7" path="res://goblin/bomb/bomb.png" id="3_0esdm"]
[ext_resource type="Texture2D" uid="uid://c532fxlatumv3" path="res://goblin/bomb/explosion.png" id="3_yaibq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_exbea"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qgipx"]
atlas = ExtResource("3_0esdm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ppe7"]
atlas = ExtResource("3_0esdm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hs5p"]
atlas = ExtResource("3_yaibq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3h41"]
atlas = ExtResource("3_yaibq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mlm0"]
atlas = ExtResource("3_yaibq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50u3n"]
atlas = ExtResource("3_yaibq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvn41"]
atlas = ExtResource("3_yaibq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru2g7"]
atlas = ExtResource("3_yaibq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwn6b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgipx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ppe7")
}],
"loop": true,
"name": &"blink",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hs5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3h41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50u3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvn41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru2g7")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explode",
"speed": 24.0
}]

[node name="Bomb" type="Area2D"]
script = ExtResource("1_8jomn")
time_to_detonation = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_exbea")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_mwn6b")
animation = &"blink"
autoplay = "blink"

[node name="BlinkTimer" type="Timer" parent="."]

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kulya")

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="finished" from="ExplodeSound" to="." method="_on_explode_sound_finished"]
